@@ -4,6 +4,10 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2015-06-29
+ * Now requires pQuery and Data::OpenGraph.
+ * Added Wing::ContentFilter
+
 2015-06-26
  * wing.angular.js objectListManager search() now uses then() instead of success() and returns its results to be compatible with bootstrap ui typeahead.
 
